<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">daniel_s_application4</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_c_ignoring_cro">C. Ignoring cross-device compatibility for simplicity.</string>
  <string name="lbl_12_25">12/25</string>
  <string name="lbl_start">Start</string>
  <string name="msg_b_utilizing_re">B. Utilizing responsive design principles.</string>
  <string name="msg_welcome_to_acei">Welcome to AceInterview!

Before we start prepping you for your upcoming interview, let us know your field so we can prepare better questions!</string>
  <string name="lbl_your_result">Your result:</string>
  <string name="msg_average_time_ta2">Average time take per question:
</string>
  <string name="msg_when_optimizing">When optimizing the performance of a mobile app for various devices, which technique is commonly used to ensure a seamless user experience?</string>
  <string name="msg_time_taken_for2">Time taken for full test:
</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_8_25">8/25</string>
  <string name="lbl_try_again">Try again</string>
  <string name="msg_average_time_ta">Average time take per question:
28 seconds</string>
  <string name="msg_time_taken_for">Time taken for full test:
 15 mins 12 secs</string>
  <string name="msg_a_hardcoding">A.  Hardcoding device-specific parameters for each device.</string>
  <string name="msg_restricting_app">Restricting app availability to a single device type.</string>
  <string name="lbl_15_mins_12_secs"> 15 mins 12 secs</string>
  <string name="lbl_end">End</string>
  <string name="msg_utilizing_respo">Utilizing responsive design principles.</string>
  <string name="msg_start_your_inte">Start your Interview!</string>
  <string name="lbl_you_scored">You scored: </string>
  <string name="msg_d_restricting">D. Restricting app availability to a single device type.</string>
  <string name="lbl_b">B.</string>
  <string name="lbl_28_seconds">28 seconds</string>
  <string name="lbl_d">D.</string>
  <string name="msg_enter_your_indu">Enter your industry</string>
  <string name="msg_you_scored_8_2">You scored: 8/25</string>
  <string name="msg_computer_scienc">Computer Science &amp; IT</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
