<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="settwelvepageVM" type="com.danielsapplication.app.modules.settwelvepage.data.viewmodel.SettwelvepageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnheader"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearSetTwelvePage"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">

                <ImageView android:id="@+id/imageHome2631152"
                    android:layout_height="@dimen/_33pxh"
                    android:layout_marginEnd="@dimen/_26pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="@dimen/_33pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home2631151"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home2631151"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnleft96665491"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_44pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/linearRowleft96665491"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_35pxh"
                        android:layout_marginStart="@dimen/_36pxh"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageLeft96665491"
                            android:layout_height="@dimen/_38pxh"
                            android:layout_marginBottom="@dimen/_2pxv"
                            android:layout_width="@dimen/_37pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_left96665491"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_left96665491"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txt1225"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_99pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_weight="0.5"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{settwelvepageVM.settwelvepageModel.txt1225}"
                            style="@style/txtInterregular24" tools:text="@string/lbl_12_25"/>
                        <ImageView android:id="@+id/imageLeft96665493"
                            android:layout_height="@dimen/_38pxh"
                            android:layout_marginBottom="@dimen/_2pxv"
                            android:layout_marginStart="@dimen/_108pxh"
                            android:layout_width="@dimen/_37pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_left96665492"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_left96665492"/>
                    </LinearLayout>

                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtDescription"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_35pxh"
                        android:layout_marginStart="@dimen/_36pxh"
                        android:layout_marginTop="@dimen/_65pxv"
                        android:layout_width="match_parent"
                        android:text="@{settwelvepageVM.settwelvepageModel.txtDescription}"
                        style="@style/txtIntermedium24" tools:text="@string/msg_when_optimizing"/>
                    <FrameLayout
                        android:id="@+id/frameStackepnbluebgone"
                        android:layout_height="@dimen/_477pxv"
                        android:layout_marginTop="@dimen/_33pxv" android:layout_width="match_parent">
                        <ImageView android:id="@+id/imageEpnbluebgOne"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_477pxh"
                            android:layout_width="match_parent"
                            android:scaleType="fitXY"
                            cornerRadius="@{@dimen/_26pxh}"
                            imageRes="@{@drawable/img_epnbluebg2}"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_epnbluebg2"/>
                        <LinearLayout
                            android:id="@+id/linearColumngrouptwentyseven"
                            android:layout_gravity="top|center"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_21pxv"
                            android:layout_marginEnd="@dimen/_20pxh"
                            android:layout_marginStart="@dimen/_20pxh"
                            android:layout_marginTop="@dimen/_21pxv"
                            android:layout_width="match_parent" android:orientation="vertical">
                            <LinearLayout
                                android:gravity="center_horizontal"
                                android:id="@+id/linearColumnlanguage"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_2pxh"
                                android:layout_width="match_parent"
                                android:orientation="vertical" style="@style/groupStylegray_201cornerRadius">
                                <TextView android:gravity="end"
                                    android:id="@+id/txtLanguage"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/_11pxv"
                                    android:layout_marginEnd="@dimen/_7pxh"
                                    android:layout_marginStart="@dimen/_26pxh"
                                    android:layout_marginTop="@dimen/_23pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{settwelvepageVM.settwelvepageModel.txtLanguage}"
                                    style="@style/txtInterregular16" tools:text="@string/msg_a_hardcoding"/>
                            </LinearLayout>
                            <TextView android:ellipsize="end"
                                android:gravity="center_horizontal"
                                android:id="@+id/txtGroupTwentySeven"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_2pxh"
                                android:layout_marginTop="@dimen/_5pxv"
                                android:layout_width="match_parent"
                                android:paddingBottom="@dimen/_25pxv"
                                android:paddingStart="@dimen/_30pxh"
                                android:paddingTop="@dimen/_17pxv"
                                android:singleLine="true"
                                android:text="@{settwelvepageVM.settwelvepageModel.txtGroupTwentySeven}"
                                style="@style/txtSolidRounded" tools:text="@string/msg_b_utilizing_re"/>
                            <LinearLayout
                                android:gravity="center_horizontal"
                                android:id="@+id/linearColumncignoringcro"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_2pxh"
                                android:layout_marginTop="@dimen/_5pxv"
                                android:layout_width="match_parent"
                                android:orientation="vertical" style="@style/groupStylegray_201cornerRadius">
                                <TextView android:gravity="start"
                                    android:id="@+id/txtCIgnoringcro"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/_18pxv"
                                    android:layout_marginEnd="@dimen/_26pxh"
                                    android:layout_marginStart="@dimen/_26pxh"
                                    android:layout_marginTop="@dimen/_13pxv"
                                    android:layout_width="match_parent"
                                    android:text="@{settwelvepageVM.settwelvepageModel.txtCIgnoringcro}"
                                    style="@style/txtInterregular16" tools:text="@string/msg_c_ignoring_cro"/>
                            </LinearLayout>
                            <FrameLayout
                                android:id="@+id/frameStackepnlogowhite"
                                android:layout_gravity="center_horizontal"
                                android:layout_height="@dimen/_167pxv"
                                android:layout_marginEnd="@dimen/_2pxh"
                                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_383pxh">

                                <ImageView
                                    android:id="@+id/imageEpnlogowhite"
                                    imageRes="@{@drawable/img_epnlogowhite}"
                                    android:layout_width="119dp"
                                    android:layout_height="@dimen/_100pxh"
                                    android:layout_gravity="bottom|center"
                                    android:layout_marginStart="@dimen/_115pxh"
                                    android:layout_marginTop="@dimen/_10pxv"
                                    android:layout_marginEnd="@dimen/_115pxh"
                                    android:scaleType="fitXY"
                                    tools:ignore="ContentDescription"
                                    tools:src="@drawable/img_epnlogowhite" />

                                <TextView android:ellipsize="end"
                                    android:gravity="top|start"
                                    android:id="@+id/txtGroupTwentySix"
                                    android:layout_gravity="top|start"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_10pxv"
                                    android:layout_width="match_parent"
                                    android:paddingBottom="@dimen/_17pxv"
                                    android:paddingStart="@dimen/_28pxh"
                                    android:paddingTop="@dimen/_10pxv"
                                    android:singleLine="true"
                                    android:text="@{settwelvepageVM.settwelvepageModel.txtGroupTwentySix}"
                                    style="@style/txtSolidRounded" tools:text="@string/msg_d_restricting"/>
                            </FrameLayout>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
